@@ -1,5 +1,7 @@
 package org.csa.truffle.graal.source;
 
+import org.apache.commons.io.IOUtils;
+
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
@@ -34,7 +36,7 @@ public class ResourcePythonSource implements PythonSource {
     private String readResource(String path) throws IOException {
         try (InputStream is = getClass().getClassLoader().getResourceAsStream(path)) {
             if (is == null) throw new IOException("Resource not found: " + path);
-            return new String(is.readAllBytes(), StandardCharsets.UTF_8);
+            return IOUtils.toString(is, StandardCharsets.UTF_8);
         }
     }
 }
